GNOME Bugzilla – Bug 774083
spelling mistakes in glib: charater
Last modified: 2017-10-06 11:50:01 UTC
Bug-Debian: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=783460 There are several misspellings of the word "character" in the glib library. Here's the output from trivial fgrep -r charater : docs/reference/glib/html/glib-Perl-compatible-regular-expressions.html:<p>A dot metacharater (".") in the pattern matches all docs/reference/glib/html/glib-Perl-compatible-regular-expressions.html: metacharater.</p> docs/reference/glib/html/glib-Perl-compatible-regular-expressions.html: metacharater.</p> glib/giochannel.c: g_warning ("Partial charater written before writing unichar.\n"); glib/gvariant.c: * If @limit is non-%NULL then @limit (and any charater after it) will glib/gregex.h: * @G_REGEX_DOTALL: A dot metacharater (".") in the pattern matches all glib/gregex.h: * metacharater. glib/gregex.h: * metacharater. glib/pcre/pcre_compile.c: /* Handle the case of a single charater - either with no UTF support, or
Is this taken or can I do this?
a patch would be welcome
Created attachment 339533 [details] [review] spelling mistakes in glib corrected
Pushed with a tweaked commit message. Thanks.