glib: Correct typos of ‘character’

https://bugzilla.gnome.org/show_bug.cgi?id=774083